Remove fixed height of country cards and add align-items: stretch

--- a/task2_7/styles/_variables.scss
+++ b/task2_7/styles/_variables.scss
@@ -11,7 +11,6 @@ $card-box-shadow: 5px 5px 15px -10px #000;
 $border-radius: 5px;
 $cards-column-gap: 2rem;
 $cards-row-gap: 4rem;
-$card-height: 424px;
 $card-width: 320px;
 $card-image-height: 213px;
 $card-image-width: 320px;
