--- a/task2_7/styles/style.scss
+++ b/task2_7/styles/style.scss
@@ -79,10 +79,10 @@ main {
 
 .card {
   width: $card-width;
-  height: $card-height;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: stretch;
   border-radius: $border-radius;
   box-shadow: $card-box-shadow;
 }
